test(export): fix export tests